--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myapp",
-  "homepage": "https://rahulchaudhary222.github.io/hotelTemplate",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
